# fastprimenumbers

./: .gitignore  LICENSE  README.md  package-lock.json
go/: go.mod  primes.go.todo  primes_alternate_ways.go.todo  test_performance_primes.go.todo  test_primes.go.todo
java/: primes.java  primes_alternate_ways.java  test_performance_primes.java  test_primes.java
javascript/: README.md  package-lock.json  package.json  primes.js
javascript/demos/: isprimeall.html  isprimealternate.html  isprimecount.html  isprimefactorial.html  isprimerange.html
javascript/src/: 10000.json  100000.js  1000000.js  1000000.json  count.js  count.min.js  generator.js  generator.min.js  primes.all.js  primes.all.min.js  primes.ip.js  primes.ip.min.js  primes.js  primes.min.js  random.js  random.min.js  range.js  range.min.js  sum.js  sum.min.js  utils.min.js
nodejs/: README.md  index.js  index.mjs  package-lock.json  package.json  primes.js  primes_alternate_ways.js  test_performance_primes.js  test_primes.js
nodejs/demos/: allimports.js  allimports.mjs  demos_count.js  demos_factorial.js  demos_generator.js  demos_primes.js  (+5 more)
php/: primes.php  primes_alternate_ways.php  test_performance_primes.php  test_primes.php
python/: README.md  __init__.py  primes.py  primes_alternate_ways.py  pyproject.toml  setup.py  test_performance_primes.py  test_primes.py
python/primes/: __init__.py  primes.py  primes_alternate_ways.py
python/tests/: test_performance_primes.py  test_primes.py
typescript/: index.ts  package-lock.json  package.json  test_performance_primes.ts  test_primes.ts
(+61 files in other folders)
