[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fasterprimes"
version = "0.0.3"
authors = [
  { name="Ganesh Bhat", email="ganeshsurfs@gmail.com" },
]
description = "Fastest Prime Number Calculation (checks) logic for python. Also contains other prime number calculation ways"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ganeshkbhat/fastprimecalculations"
"Bug Tracker" = "https://github.com/ganeshkbhat/fastprimecalculations/issues"
